// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> with <Field.Autocomplete /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="autocomplete"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-jzJRlG bTVSHD"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="both"
        aria-expanded={false}
        aria-owns="field-results"
        autoComplete="off"
        className="sc-cSHVUG jrEObi"
        id="autocomplete"
        name="field"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Select…"
        type="text"
      />
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> in error matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Question mark
              </title>
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
                fill="#FFF"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip te8bfc466-e41e-4b5a-8394-3f2951105d8b place-top type-dark"
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
  	.te8bfc466-e41e-4b5a-8394-3f2951105d8b {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-top {
        margin-top: -10px;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-top::before {
        border-top: 8px solid transparent;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-bottom {
        margin-top: 10px;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-left {
        margin-left: -10px;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-left::before {
        border-left: 8px solid transparent;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-right {
        margin-left: 10px;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-right::before {
        border-right: 8px solid transparent;
    }
    .te8bfc466-e41e-4b5a-8394-3f2951105d8b.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
                }
              }
            />
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <input
      className="sc-htpNat iVlOqv"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="sc-gZMcBi giNnHm k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Error!
    </p>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Question mark
              </title>
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
                fill="#FFF"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip t2e5541a8-31c3-47a0-abd6-3a982235a73f place-top type-dark"
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
  	.t2e5541a8-31c3-47a0-abd6-3a982235a73f {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-top {
        margin-top: -10px;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-top::before {
        border-top: 8px solid transparent;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-bottom {
        margin-top: 10px;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-left {
        margin-left: -10px;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-left::before {
        border-left: 8px solid transparent;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-right {
        margin-left: 10px;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-right::before {
        border-right: 8px solid transparent;
    }
    .t2e5541a8-31c3-47a0-abd6-3a982235a73f.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
                }
              }
            />
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <input
      className="sc-htpNat fTSCbm"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> in error matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Question mark
              </title>
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
                fill="#FFF"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip t141da9e2-7330-4d46-a534-478800c89ea0 place-top type-dark"
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
  	.t141da9e2-7330-4d46-a534-478800c89ea0 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t141da9e2-7330-4d46-a534-478800c89ea0.place-top {
        margin-top: -10px;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-top::before {
        border-top: 8px solid transparent;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t141da9e2-7330-4d46-a534-478800c89ea0.place-bottom {
        margin-top: 10px;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t141da9e2-7330-4d46-a534-478800c89ea0.place-left {
        margin-left: -10px;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-left::before {
        border-left: 8px solid transparent;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t141da9e2-7330-4d46-a534-478800c89ea0.place-right {
        margin-left: 10px;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-right::before {
        border-right: 8px solid transparent;
    }
    .t141da9e2-7330-4d46-a534-478800c89ea0.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
                }
              }
            />
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-gqjmRU eSPiSL"
    >
      <input
        className="sc-htpNat iVlOqv sc-VigVT fUPyOg"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <span
        aria-pressed={false}
        className="sc-jTzLTM gQMtOg"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        title="Show password"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="sc-gZMcBi giNnHm k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Error!
    </p>
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <div
          className="k-Tooltip"
        >
          <button
            aria-describedby="tooltip"
            className="k-ButtonIcon k-ButtonIcon--tooltip--nano k-ButtonIcon--helium k-ButtonIcon--nano k-ButtonIcon--rounded"
            data-dismiss="tooltip"
            data-event="TooltipEvents__open_tooltip"
            data-for="tooltip"
            data-place="right"
            data-tip={true}
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            <svg
              className="k-ButtonIcon__svg"
              viewBox="0 0 6 10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Question mark
              </title>
              <path
                d="M1.98 8.486c0 .468.372.852.852.852a.858.858 0 1 0 0-1.716.85.85 0 0 0-.852.864zM3.552 5.63c1.32-.264 2.208-1.2 2.208-2.46C5.76 1.682 4.584.662 2.988.662c-1.2 0-2.16.624-2.748 1.488l.912.996C1.62 2.306 2.232 1.97 3 1.97c.708 0 1.332.432 1.332 1.176 0 .9-.876 1.332-1.8 1.332h-.396v2.196h1.416V5.63z"
                fill="#FFF"
              />
            </svg>
          </button>
          <div
            className="__react_component_tooltip t74f81bba-ee79-4950-8355-618d3fabd7ca place-top type-dark"
            data-id="tooltip"
            id="tooltip"
            role="tooltip"
          >
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
  	.t74f81bba-ee79-4950-8355-618d3fabd7ca {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t74f81bba-ee79-4950-8355-618d3fabd7ca.place-top {
        margin-top: -10px;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-top::before {
        border-top: 8px solid transparent;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-bottom {
        margin-top: 10px;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-left {
        margin-left: -10px;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-left::before {
        border-left: 8px solid transparent;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-right {
        margin-left: 10px;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-right::before {
        border-right: 8px solid transparent;
    }
    .t74f81bba-ee79-4950-8355-618d3fabd7ca.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
                }
              }
            />
            Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="sc-gqjmRU eSPiSL"
    >
      <input
        className="sc-htpNat fTSCbm sc-VigVT fUPyOg"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <span
        aria-pressed={false}
        className="sc-jTzLTM gQMtOg"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
        title="Show password"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </span>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.RadioButtonSet /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="option-a"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="k-RadioButtonSet"
    >
      <div
        className="k-RadioButton k-RadioButtonSet__radioButton"
      >
        <input
          className="k-RadioButton__input"
          defaultChecked={true}
          id="option-a"
          name="radio"
          type="radio"
        />
        <label
          className="k-RadioButton__label"
          htmlFor="option-a"
        >
          Option A
        </label>
      </div>
      <div
        className="k-RadioButton k-RadioButtonSet__radioButton"
      >
        <input
          className="k-RadioButton__input"
          id="option-b"
          name="radio"
          type="radio"
        />
        <label
          className="k-RadioButton__label"
          htmlFor="option-b"
        >
          Option B
        </label>
      </div>
      <div
        className="k-RadioButton k-RadioButtonSet__radioButton"
      >
        <input
          className="k-RadioButton__input"
          id="option-c"
          name="radio"
          type="radio"
        />
        <label
          className="k-RadioButton__label"
          htmlFor="option-c"
        >
          Option C
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Select /> matches with snapshot 1`] = `
Array [
  <div
    className="sc-bdVaJa hOgMxB"
  >
    <div
      className="k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="k-Label k-Label--micro"
          htmlFor="select"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <div
      className="k-Select"
    >
      <div
        className="Select Select--single"
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-2--value"
          >
            <div
              className="Select-placeholder"
            >
              Select…
            </div>
            <div
              aria-activedescendant="react-select-2--value"
              aria-disabled="false"
              aria-expanded={false}
              aria-owns=""
              className="Select-input"
              onBlur={[Function]}
              onFocus={[Function]}
              role="combobox"
              style={
                Object {
                  "border": 0,
                  "display": "inline-block",
                  "width": 1,
                }
              }
              tabIndex={0}
            />
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
]
`;
